src/styles/main.scss
// GOV.UK Frontend configuration
$govuk-assets-path: "govuk-frontend/dist/govuk/assets/";
$govuk-font-family: open-sans, sans-serif;
$govuk-page-width: 1100px;

// BOPS custom colors
$bops-light-blue-background: #f4f8fb;
$bops-blue-border: #8eb8dc;

// GOV.UK Frontend
@import "govuk-frontend/dist/govuk/all";

// Base element styles (matching BOPS app)
p {
  @extend .govuk-body;
  color: inherit;
}

h1 {
  @extend .govuk-heading-l;
  color: inherit;
}

h2 {
  @extend .govuk-heading-m;
  color: inherit;
}

h3 {
  @extend .govuk-heading-s;
  color: inherit;
}


// BOPS custom classes

.environment-banner {
  background-color: govuk-colour("yellow");
  padding: govuk-spacing(1);
}

.comment-component {
  border-left: 10px solid $govuk-link-colour;
  background-color: #f2f9ff;
}

.button-as-link {
  border: none;
  background: none;
  padding: 0;
  color: govuk-colour("blue");
  font-family: $govuk-font-family;
  font-size: inherit;
  line-height: 1;
  text-decoration: underline;
  text-decoration-thickness: $govuk-link-underline-thickness;
  text-underline-offset: $govuk-link-underline-offset;
  cursor: pointer;

  &:active {
    color: govuk-colour("black");
  }

  &:hover {
    color: govuk-colour("dark-blue");
    text-decoration-thickness: $govuk-link-hover-underline-thickness;
  }

  &:focus {
    color: govuk-colour("black");
    background-color: govuk-colour("yellow");
    box-shadow:
      0 -2px govuk-colour("yellow"),
      0 4px govuk-colour("black");
    text-decoration: none;
    outline: none;
  }
}

.flash-archive {
  border: 5px solid govuk-colour("green");
  @include govuk-font($size: 19);
  color: govuk-colour("black");
  display: block;
  overflow: hidden;
  margin-bottom: govuk-spacing(6);
  padding: govuk-spacing(2);
}

.corrections-banner {
  border: 5px solid govuk-colour("red");
  @include govuk-font($size: 19);
  color: govuk-colour("black");
  display: block;
  overflow: hidden;
  margin-bottom: govuk-spacing(6);
  padding: govuk-spacing(2);
}

.response-banner {
  border: 5px solid govuk-colour("blue");
  @include govuk-font($size: 19);
  color: govuk-colour("black");
  display: block;
  overflow: hidden;
  margin-bottom: govuk-spacing(6);
  padding: govuk-spacing(2);
}

.grey-box {
  background-color: govuk-colour("light-grey");
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding: 2rem;
}

.grey-border-box {
  background-color: govuk-colour("light-grey");
  border: 1px solid $govuk-border-colour;
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding: 2rem;
}

// ---------------------------------------------------------------------------
// Document tags (from source: components/_documents.scss)
// ---------------------------------------------------------------------------

.document-tag {
  margin-right: 3px;
  margin-bottom: 10px;
}

.document-thumbnail-placeholder {
  background-color: govuk-colour("light-grey");
  border: 2px dashed $govuk-border-colour;
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 300px;
  @include govuk-font($size: 16);
  color: $govuk-secondary-text-colour;
}

.govuk-\!-column-count-2 {
  column-count: 2;
}

// Status tag overrides
.govuk-tag {
  max-width: none;
}

.govuk-tag--status-complete,
.govuk-tag--status-cannot_start_yet,
.govuk-tag--status-not_required,
.govuk-tag--status-review_complete,
.govuk-tag--status-checked {
  background-color: transparent;
}

.govuk-tag--status-cannot_start_yet,
.govuk-tag--status-not_required {
  color: $govuk-secondary-text-colour;
}

// Status panel
.status-bar-container {
  &--colored {
    padding-inline: 2rem;
    background-color: rgb(202, 222, 237);
  }

  h2 {
    max-width: $govuk-page-width;
    margin-left: auto;
    margin-right: auto;
    padding-top: 1rem;
  }

  .status-bar {
    max-width: $govuk-page-width;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    gap: 3rem;

    .status-panel {
      background-color: govuk-colour("light-grey");
      margin-top: 1rem;
      margin-bottom: 1rem;
      display: inline-block;
      padding: 1rem;

      &--highlighted {
        background-color: white;
        border: 5px solid govuk-colour("yellow");
      }

      h3 {
        margin: 0;
      }

      p {
        margin-bottom: 0;
        margin-top: 0.5em;
      }
    }
  }
}

// ---------------------------------------------------------------------------
// Neighbour response accordion (from source: consultation.scss)
// ---------------------------------------------------------------------------

.govuk-accordion__section-content {
  .neighbour-response-section {
    border-bottom: 1px solid $govuk-border-colour;
  }

  .neighbour-response-section:last-child {
    border-bottom: none;
  }
}

.neighbour-tags {
  width: 12%;
}

.neighbour-response-top-section {
  display: flex;
  align-items: baseline;
  justify-content: space-between;
}

.neighbour-response-content {
  width: 80%;

  .app-task-list__task-tag {
    float: left;
  }
}

#neighbour-response-accordion {
  .govuk-accordion__controls {
    display: none;
  }

  .govuk-accordion__section {
    border-bottom: 1px solid $govuk-border-colour;
  }

  .neighbour-response {
    border-bottom: 1px solid $govuk-border-colour;

    &:last-of-type {
      border-bottom: none;
    }
  }

  .neighbour-response-section {
    border-bottom: none;
  }

  .govuk-accordion__section-content {
    padding-bottom: 0px;
  }
}
/* ... */

